<resources>
    <string name="app_name" translatable="false">Publist</string>
    <string name="facebook_app_id" translatable="false">2442611249323495</string>
    <string name="login_headline">Welcome to Publist, to add public checklist you need to be a guest or a signed user..</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="connect_with_google">Connect with Google</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="find_wish_lists">find wish lists</string>
    <string name="intro_headline">Choose some interests to personalize your wish lists</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">LOG IN</string>
    <string name="skip">SKIP</string>
    <string name="save">Save</string>
    <string name="edit_profile">Choose your interests</string>
    <string name="saved">Saved!</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="maximum_categories">You can select at most %1$d categories</string>
    <string name="maximum_categories_create_wish">You can select at most one category</string>
    <string name="go_to_details">Go to details</string>
    <string name="create_wish_categories_default">Choose Categories</string>
    <string name="title">Title</string>
    <string name="title_hint">Type something</string>
    <string name="add_photo_optional">Add Photo (optional)</string>
    <string name="wish_list_title">List</string>
    <string name="add_item_hint">\u0020\u0020Add Text</string>
    <string name="create_wish_post">Post</string>
    <string name="choose_category_done">Done</string>
    <string name="what_is_your_wish_list">What is your wish list ?</string>
    <string name="log_out">Log out</string>
    <string name="permission_required">Permission is required to proceed</string>
    <string name="permission_from_settings">Enable permissions from settings to proceed</string>
    <string name="post_wish_success">Posted Successfully!</string>
    <string name="edit_wish_success">Edited Successfully!</string>
    <string name="minimum_wish_items">You have to make at least %1$d items</string>
    <string name="camera_gallery_dialog_title">Add a Photo</string>
    <string name="select_from_gallery">Select photo from gallery</string>
    <string name="select_from_camera">Capture photo from camera</string>
    <string name="logout_dialog_title">Are you sure you want to logout?</string>
    <string name="click_again_to_exit">Click back again to exit</string>
    <string name="lists">Lists</string>
    <string name="my_favorites">My Favorites</string>
    <string name="remove_favorite">Removed from My Favorites</string>
    <string name="add_favorite">Added to My Favorites</string>
    <string name="no_favorites">No Favorites found</string>
    <string name="start_favoriting">Start favoriting</string>
    <string name="no_lists">No Lists</string>
    <string name="create_your_first_list">Create your first list</string>
    <string name="new_wish_list">New Wish List</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_wish">Your wish has been deleted !</string>
    <string name="edit_wish">Edit Wish</string>
    <string name="delete_dialog_title">Are you sure you want to delete this wish?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="views">+ %1$d Views</string>
    <string name="completed">+ %1$d Completed</string>
    <string name="wish_details">Wish details</string>
    <string name="remove_wish_title">Remove Wish from My Favorites</string>
    <string name="remove_wish_message">You already have checked items in this wish , are you sure?</string>
    <string name="search_hint">Search wishes</string>
    <string name="no_result_found">No result found</string>
    <string name="guest_action_prompt">You are unregistered , you need to login first</string>
    <string name="login">Login</string>
    <string name="wish_removed">Wish removed</string>
    <string name="undo">Undo</string>
    <string name="check_your_internet_connection">Please check your internet connection</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="next">Next</string>
    <string name="get_started">Get started</string>
    <string name="onboarding_text1">Get the latest list you are interested in</string>
    <string name="onboarding_text2">Create your own list and share it with others</string>
    <string name="onboarding_text3">Complete , like or check the most important items</string>
    <string name="onboarding_text4">Customize your interests and follow up categories</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="terms1">Welcome to Publist! These terms and conditions outline the rules and regulations for the use of Publist\'s Mobile App \n By accessing this application we assume you accept these terms and conditions. Do not continue to use Publist if you do not agree to take all of the terms and conditions stated on this page. \n The following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements: \"Client\", \"You\" and \"Your\" refers to you, the person log on this application and compliant to the Company’s terms and conditions. \"The Company\", \"Ourselves\", \"We\", \"Our\" and \"Us\", refers to our Company. \"Party\", \"Parties\", or \"Us\", refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same.</string>
    <string name="license"><u>License</u></string>
    <string name="terms2">Unless otherwise stated, Publist and/or its licensors own the intellectual property rights for all material on Publist. All intellectual property rights are reserved. You may access this from Publist for your own personal use subjected to restrictions set in these terms and conditions.</string>
    <string name="you_must_not"><u>You must not:</u></string>
    <string name="terms3">Republish material from Publist \n Sell, rent or sub-license material from Publist \n Reproduce, duplicate or copy material from Publist \n Redistribute content from Publist</string>
    <string name="terms4">Parts of this application offer an opportunity for users to post and exchange opinions and information in certain areas of the application. Publist does not filter, edit, publish or review Comments prior to their presence on the application. Comments do not reflect the views and opinions of Publist,its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, Publist shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this application. \n Publist reserves the right to monitor all Comments and to remove any Comments which can be considered inappropriate, offensive or causes breach of these Terms and Conditions</string>
    <string name="you_warrant_and_represent_that"><u>You warrant and represent that:</u></string>
    <string name="terms5">You are entitled to post the Comments on our website and have all necessary licenses and consents to do so; \n The Comments do not invade any intellectual property right, including without limitation copyright, patent or trademark of any third party; \n The Comments do not contain any defamatory, libelous, offensive, indecent or otherwise unlawful material which is an invasion of privacy \n The Comments will not be used to solicit or promote business or custom or present commercial activities or unlawful activity.</string>

</resources>

