<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/sunsetOrange"
    android:gravity="center">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/acceptButton"
        android:layout_height="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms1"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@android:color/white" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms2"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_must_not"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms3"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms4"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_warrant_and_represent_that"
                android:layout_marginTop="40dp"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms5"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="40dp"
                android:layout_marginHorizontal="20dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/acceptButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/sfprodisplaybold"
        android:text="@string/accept"
        android:textColor="@color/sunsetOrange"
        app:cornerRadius="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
